--- a/roles/openjdk/tasks/main.yml
+++ b/roles/openjdk/tasks/main.yml
@@ -31,10 +31,10 @@
     state: present  
 
 # executing the source command to load functions into current shell  
-- name: running the source command
-  shell: source /etc/environment
-  args:
-    executable: /bin/bash
+# - name: running the source command
+#   shell: source /etc/environment
+#   args:
+#     executable: /bin/bash
 
 # - name: setting java home path
 #   shell: echo JAVA_HOME is $JAVA_HOME
