--- a/roles/tomcat/META/main.yml
+++ b/roles/tomcat/META/main.yml
@@ -1,19 +1,3 @@
-Project_info:
-  author: vinay reddy
-  description: Install and manage a tomcat server
-  company: N/A
-  license: Apache 2
-  min_ansible_version: 1.8
-  platforms:
-  - name: Redhat 
-    versions:
-    - 7
-    - 6
-  - name: Ubuntu
-    versions:
-    - trusty
-  - name: Amazon
-    versions:
-    - all
-categories:
-  - web
+---
+dependencies:
+- { role: openjdk }
